SNE-55 adjusted uswds to wait for the page to load before it's added to the page, to avoid race conditions. Fixing sticky behavior. Putting breadcrumb in the grid container as i was debugging overflow issues

--- a/blocks/in-page-navigation/in-page-navigation.scss
+++ b/blocks/in-page-navigation/in-page-navigation.scss
@@ -1,2 +1,6 @@
 @use '../../styles/ne-global-imports' as *;
 @use '~uswds/usa-in-page-navigation/src/styles/usa-in-page-navigation';
+
+.in-page-navigation {
+	min-height: 100%; // so that the inner .usa-in-page-navigation can be sticky within this space
+}
